[package]
name = "serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
sqlx = { version = "0.5.*", features = [ "runtime-tokio-rustls", "sqlite", "chrono", "macros", "migrate", "uuid", "json" ] }
async-trait = "0.1.*"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.*"
